--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 	"license": "ISC",
 	"devDependencies": {
 		"css-loader": "^3.4.2",
+		"eslint": "^6.8.0",
+		"eslint-config-airbnb-base": "^14.0.0",
+		"eslint-loader": "^3.0.3",
+		"eslint-plugin-import": "^2.20.1",
 		"file-loader": "^5.1.0",
 		"html-loader": "^0.5.5",
 		"less": "^3.11.1",
@@ -36,5 +40,8 @@
 			"not dead",
 			"last 2 versions"
 		]
+	},
+	"eslintConfig": {
+		"extends": "airbnb-base"
 	}
 }
